--- a/temp.html
+++ b/temp.html
@@ -19,22 +19,23 @@
             <img class="logoImg" src="images/logo2.png" alt="">
           
             <div class="topnav" id="topnav">
-                <a class="active" href="#home" id="homeBtn">Home</a>
-                <a href="#hosting" id="hostingBtn">Hosting</a>
-                <a href="#sites" id="sitesBtn">Websites</a>
-                <a href="#about" id="aboutBtn">About</a>         
+                <a class="active" href="#home">Home</a>
+                <a href="#hosting">Hosting</a>
+                <a href="#sites">Websites</a>
+                <a href="#about">About</a>         
             </div>
 
         </div>
-<div class="constructionDiv" id="constructionDiv">Under Construction</div>
+
         <div class="introDiv" id="introDiv">
             <img src="images/pexels-olia-danilevich-4974915.jpg" alt="" class="introImg" id="introImg">
             <p class="introMsg" id="introMsg"> CUSTOM WEB DESIGN<br>
                 Beautiful Websites<br>
-                Built By Hand<br>
-                In Montana near Wyoming<br> 
+                Built From The Ground Up<br>
+                By A Human & AI<br> 
                 1st Year of Hosting Included<br>             
-                Starts at just $500<br><br>
+                Starts at just $500<br>
+                Site is Under Construction...
             </p>
         </div>
 
