hosting page up, created functions for nav link and page display

--- a/index.html
+++ b/index.html
@@ -19,22 +19,28 @@
             <img class="logoImg" src="images/logo2.png" alt="">
           
             <div class="topnav" id="topnav">
-                <a class="active" href="#home" id="homeBtn">Home</a>
+                <a href="#home" class="active" id="homeBtn">Home</a>
                 <a href="#hosting" id="hostingBtn">Hosting</a>
                 <a href="#sites" id="sitesBtn">Websites</a>
                 <a href="#about" id="aboutBtn">About</a>         
             </div>
 
         </div>
-<div class="constructionDiv" id="constructionDiv">Under Construction</div>
+
+<div class="hosting" id="hosting">
+    <p class="disclaimerTxt" id="disclaimerTxt">*Paid annually</p>
+</div>
+<div class="sites" id="sites"></div>
+<div class="about" id="about"></div>
         <div class="introDiv" id="introDiv">
             <img src="images/pexels-olia-danilevich-4974915.jpg" alt="" class="introImg" id="introImg">
             <p class="introMsg" id="introMsg"> CUSTOM WEB DESIGN<br>
                 Beautiful Websites<br>
-                Built By Hand<br>
-                In Montana near Wyoming<br> 
-                1st Year of Hosting Included<br>             
-                Starts at just $500<br><br>
+                Built By Hand
+                In Montana<br>
+                near Wyoming<br> 
+                1st Year of Hosting Included<br>                            
+               <br>
             </p>
         </div>
 
