basic site cards with thumb nails

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
 <div class="hosting" id="hosting">
-    <p class="disclaimerTxt" id="disclaimerTxt">*Paid annually</p>
+    <p class="disclaimerTxt" id="disclaimerTxt">*Starting price</p>
 </div>
 <div class="sites" id="sites"></div>
 <div class="about" id="about"></div>
