added mobile thumb nails and started about page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <p class="disclaimerTxt" id="disclaimerTxt">*Starting price</p>
 </div>
 <div class="sites" id="sites"></div>
-<div class="about" id="about"></div>
+<div class="about" id="about">
+    <h2 class="name" id="name">Dillon</h2>
+    <a href="https://github.com/dielawn">github</a><br>
+    <a href="">LinkedIn</a>
+</div>
         <div class="introDiv" id="introDiv">
             <img src="images/pexels-olia-danilevich-4974915.jpg" alt="" class="introImg" id="introImg">
             <p class="introMsg" id="introMsg"> CUSTOM WEB DESIGN<br>
