intro image position

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="HTML, CSS, JavaScript, developer, dev, Web developer, website, hosting, coding,">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dillon's Web Hosting</title>
+    <title>Dillon's Web Design & Hosting</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display&display=swap" rel="stylesheet">
@@ -35,6 +36,7 @@
     <h2 class="name" id="name">Dillon</h2>
     <a href="https://github.com/dielawn">github</a><br>
     <a href="">LinkedIn</a>
+    <p class="proBio" id="proBio">JavaScript</p>
 </div>
         <div class="introDiv" id="introDiv">
             <img src="images/pexels-olia-danilevich-4974915.jpg" alt="" class="introImg" id="introImg">
